--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,7 @@
 {
-   "name": "frontend-react-vite",
+   "name": "client",
    "version": "1.0.0",
-   "description": "Final fullstack project for Okten School",
-   "author": "Eldar Bayramov",
+   "author": "Eldar Bairamov",
    "private": true,
    "type": "module",
    "scripts": {
